fix(vault): the history and the protected names are kept as standard collections (#408)
setHistory and setProtectedPropertyKeys kept whatever collection they
were handed. A List.of or Set.of is a JDK-internal class XStream can only
write by reflecting into java.util: measured with the test JVM's
--add-opens removed, writing a vault whose protected names came from
Set.of("TOTP seed") fails with "ConversionException: No converter
available ... type: java.util.ImmutableCollections$Set12"; with the flag,
the vault would have carried that class name. The setters copy into an
ArrayList and a LinkedHashSet. Production code already built those types
(converter, duplicate()), so no vault written so far is affected.

EntryHistoryInTheVaultTest hands in List.of and Set.of and asserts the
xml names no ImmutableCollections and reads back: red before the copy
(the ConversionException above), green after.